// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AuthCode in RTL renders Default 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        dir="rtl"
      >
        <form
          class="flex flex-col justify-between items-end gap-y-2"
        >
          <div
            class="flex flex-row justify-center gap-2"
          >
            <input
              aria-label="Character 1."
              autocomplete="one-time-code"
              class="h-14 w-[2.875rem] text-lg rounded-xl m-0 py-3 px-4 appearance-none text-bulma box-border text-center shadow-input hover:shadow-input-hov focus:shadow-input-focus focus:outline-none focus-visible::shadow-input-focus focus-visible::outline-none"
              inputmode="text"
              maxlength="1"
              pattern="[\\\\w\\\\d]{1}"
              type="text"
            />
            <input
              aria-label="Character 2."
              autocomplete="off"
              class="h-14 w-[2.875rem] text-lg rounded-xl m-0 py-3 px-4 appearance-none text-bulma box-border text-center shadow-input hover:shadow-input-hov focus:shadow-input-focus focus:outline-none focus-visible::shadow-input-focus focus-visible::outline-none"
              inputmode="text"
              maxlength="1"
              pattern="[\\\\w\\\\d]{1}"
              type="text"
            />
            <input
              aria-label="Character 3."
              autocomplete="off"
              class="h-14 w-[2.875rem] text-lg rounded-xl m-0 py-3 px-4 appearance-none text-bulma box-border text-center shadow-input hover:shadow-input-hov focus:shadow-input-focus focus:outline-none focus-visible::shadow-input-focus focus-visible::outline-none"
              inputmode="text"
              maxlength="1"
              pattern="[\\\\w\\\\d]{1}"
              type="text"
            />
            <input
              aria-label="Character 4."
              autocomplete="off"
              class="h-14 w-[2.875rem] text-lg rounded-xl m-0 py-3 px-4 appearance-none text-bulma box-border text-center shadow-input hover:shadow-input-hov focus:shadow-input-focus focus:outline-none focus-visible::shadow-input-focus focus-visible::outline-none"
              inputmode="text"
              maxlength="1"
              pattern="[\\\\w\\\\d]{1}"
              type="text"
            />
            <input
              aria-label="Character 5."
              autocomplete="off"
              class="h-14 w-[2.875rem] text-lg rounded-xl m-0 py-3 px-4 appearance-none text-bulma box-border text-center shadow-input hover:shadow-input-hov focus:shadow-input-focus focus:outline-none focus-visible::shadow-input-focus focus-visible::outline-none"
              inputmode="text"
              maxlength="1"
              pattern="[\\\\w\\\\d]{1}"
              type="text"
            />
            <input
              aria-label="Character 6."
              autocomplete="off"
              class="h-14 w-[2.875rem] text-lg rounded-xl m-0 py-3 px-4 appearance-none text-bulma box-border text-center shadow-input hover:shadow-input-hov focus:shadow-input-focus focus:outline-none focus-visible::shadow-input-focus focus-visible::outline-none"
              inputmode="text"
              maxlength="1"
              pattern="[\\\\w\\\\d]{1}"
              type="text"
            />
          </div>
        </form>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      dir="rtl"
    >
      <form
        class="flex flex-col justify-between items-end gap-y-2"
      >
        <div
          class="flex flex-row justify-center gap-2"
        >
          <input
            aria-label="Character 1."
            autocomplete="one-time-code"
            class="h-14 w-[2.875rem] text-lg rounded-xl m-0 py-3 px-4 appearance-none text-bulma box-border text-center shadow-input hover:shadow-input-hov focus:shadow-input-focus focus:outline-none focus-visible::shadow-input-focus focus-visible::outline-none"
            inputmode="text"
            maxlength="1"
            pattern="[\\\\w\\\\d]{1}"
            type="text"
          />
          <input
            aria-label="Character 2."
            autocomplete="off"
            class="h-14 w-[2.875rem] text-lg rounded-xl m-0 py-3 px-4 appearance-none text-bulma box-border text-center shadow-input hover:shadow-input-hov focus:shadow-input-focus focus:outline-none focus-visible::shadow-input-focus focus-visible::outline-none"
            inputmode="text"
            maxlength="1"
            pattern="[\\\\w\\\\d]{1}"
            type="text"
          />
          <input
            aria-label="Character 3."
            autocomplete="off"
            class="h-14 w-[2.875rem] text-lg rounded-xl m-0 py-3 px-4 appearance-none text-bulma box-border text-center shadow-input hover:shadow-input-hov focus:shadow-input-focus focus:outline-none focus-visible::shadow-input-focus focus-visible::outline-none"
            inputmode="text"
            maxlength="1"
            pattern="[\\\\w\\\\d]{1}"
            type="text"
          />
          <input
            aria-label="Character 4."
            autocomplete="off"
            class="h-14 w-[2.875rem] text-lg rounded-xl m-0 py-3 px-4 appearance-none text-bulma box-border text-center shadow-input hover:shadow-input-hov focus:shadow-input-focus focus:outline-none focus-visible::shadow-input-focus focus-visible::outline-none"
            inputmode="text"
            maxlength="1"
            pattern="[\\\\w\\\\d]{1}"
            type="text"
          />
          <input
            aria-label="Character 5."
            autocomplete="off"
            class="h-14 w-[2.875rem] text-lg rounded-xl m-0 py-3 px-4 appearance-none text-bulma box-border text-center shadow-input hover:shadow-input-hov focus:shadow-input-focus focus:outline-none focus-visible::shadow-input-focus focus-visible::outline-none"
            inputmode="text"
            maxlength="1"
            pattern="[\\\\w\\\\d]{1}"
            type="text"
          />
          <input
            aria-label="Character 6."
            autocomplete="off"
            class="h-14 w-[2.875rem] text-lg rounded-xl m-0 py-3 px-4 appearance-none text-bulma box-border text-center shadow-input hover:shadow-input-hov focus:shadow-input-focus focus:outline-none focus-visible::shadow-input-focus focus-visible::outline-none"
            inputmode="text"
            maxlength="1"
            pattern="[\\\\w\\\\d]{1}"
            type="text"
          />
        </div>
      </form>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`AuthCode in RTL renders ErrorState 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        dir="rtl"
      >
        <form
          class="flex flex-col justify-between gap-y-2"
        >
          <div
            class="flex flex-col gap-2"
          >
            <div
              class="flex flex-row justify-center gap-2"
            >
              <input
                aria-label="Character 1."
                autocomplete="one-time-code"
                class="h-14 w-[2.875rem] text-lg rounded-xl m-0 py-3 px-4 appearance-none box-border text-center focus:outline-none focus-visible::shadow-input-focus focus-visible::outline-none text-chichi shadow-input-err hover:shadow-input-err focus:shadow-input-err"
                inputmode="text"
                maxlength="1"
                pattern="[\\\\w\\\\d]{1}"
                type="text"
              />
              <input
                aria-label="Character 2."
                autocomplete="off"
                class="h-14 w-[2.875rem] text-lg rounded-xl m-0 py-3 px-4 appearance-none box-border text-center focus:outline-none focus-visible::shadow-input-focus focus-visible::outline-none text-chichi shadow-input-err hover:shadow-input-err focus:shadow-input-err"
                inputmode="text"
                maxlength="1"
                pattern="[\\\\w\\\\d]{1}"
                type="text"
              />
              <input
                aria-label="Character 3."
                autocomplete="off"
                class="h-14 w-[2.875rem] text-lg rounded-xl m-0 py-3 px-4 appearance-none box-border text-center focus:outline-none focus-visible::shadow-input-focus focus-visible::outline-none text-chichi shadow-input-err hover:shadow-input-err focus:shadow-input-err"
                inputmode="text"
                maxlength="1"
                pattern="[\\\\w\\\\d]{1}"
                type="text"
              />
              <input
                aria-label="Character 4."
                autocomplete="off"
                class="h-14 w-[2.875rem] text-lg rounded-xl m-0 py-3 px-4 appearance-none box-border text-center focus:outline-none focus-visible::shadow-input-focus focus-visible::outline-none text-chichi shadow-input-err hover:shadow-input-err focus:shadow-input-err"
                inputmode="text"
                maxlength="1"
                pattern="[\\\\w\\\\d]{1}"
                type="text"
              />
              <input
                aria-label="Character 5."
                autocomplete="off"
                class="h-14 w-[2.875rem] text-lg rounded-xl m-0 py-3 px-4 appearance-none box-border text-center focus:outline-none focus-visible::shadow-input-focus focus-visible::outline-none text-chichi shadow-input-err hover:shadow-input-err focus:shadow-input-err"
                inputmode="text"
                maxlength="1"
                pattern="[\\\\w\\\\d]{1}"
                type="text"
              />
              <input
                aria-label="Character 6."
                autocomplete="off"
                class="h-14 w-[2.875rem] text-lg rounded-xl m-0 py-3 px-4 appearance-none box-border text-center focus:outline-none focus-visible::shadow-input-focus focus-visible::outline-none text-chichi shadow-input-err hover:shadow-input-err focus:shadow-input-err"
                inputmode="text"
                maxlength="1"
                pattern="[\\\\w\\\\d]{1}"
                type="text"
              />
            </div>
            <p
              class="inline-block mt-2 ps-4 text-moon-12 text-chichi !p-0"
              role="alert"
            />
          </div>
        </form>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      dir="rtl"
    >
      <form
        class="flex flex-col justify-between gap-y-2"
      >
        <div
          class="flex flex-col gap-2"
        >
          <div
            class="flex flex-row justify-center gap-2"
          >
            <input
              aria-label="Character 1."
              autocomplete="one-time-code"
              class="h-14 w-[2.875rem] text-lg rounded-xl m-0 py-3 px-4 appearance-none box-border text-center focus:outline-none focus-visible::shadow-input-focus focus-visible::outline-none text-chichi shadow-input-err hover:shadow-input-err focus:shadow-input-err"
              inputmode="text"
              maxlength="1"
              pattern="[\\\\w\\\\d]{1}"
              type="text"
            />
            <input
              aria-label="Character 2."
              autocomplete="off"
              class="h-14 w-[2.875rem] text-lg rounded-xl m-0 py-3 px-4 appearance-none box-border text-center focus:outline-none focus-visible::shadow-input-focus focus-visible::outline-none text-chichi shadow-input-err hover:shadow-input-err focus:shadow-input-err"
              inputmode="text"
              maxlength="1"
              pattern="[\\\\w\\\\d]{1}"
              type="text"
            />
            <input
              aria-label="Character 3."
              autocomplete="off"
              class="h-14 w-[2.875rem] text-lg rounded-xl m-0 py-3 px-4 appearance-none box-border text-center focus:outline-none focus-visible::shadow-input-focus focus-visible::outline-none text-chichi shadow-input-err hover:shadow-input-err focus:shadow-input-err"
              inputmode="text"
              maxlength="1"
              pattern="[\\\\w\\\\d]{1}"
              type="text"
            />
            <input
              aria-label="Character 4."
              autocomplete="off"
              class="h-14 w-[2.875rem] text-lg rounded-xl m-0 py-3 px-4 appearance-none box-border text-center focus:outline-none focus-visible::shadow-input-focus focus-visible::outline-none text-chichi shadow-input-err hover:shadow-input-err focus:shadow-input-err"
              inputmode="text"
              maxlength="1"
              pattern="[\\\\w\\\\d]{1}"
              type="text"
            />
            <input
              aria-label="Character 5."
              autocomplete="off"
              class="h-14 w-[2.875rem] text-lg rounded-xl m-0 py-3 px-4 appearance-none box-border text-center focus:outline-none focus-visible::shadow-input-focus focus-visible::outline-none text-chichi shadow-input-err hover:shadow-input-err focus:shadow-input-err"
              inputmode="text"
              maxlength="1"
              pattern="[\\\\w\\\\d]{1}"
              type="text"
            />
            <input
              aria-label="Character 6."
              autocomplete="off"
              class="h-14 w-[2.875rem] text-lg rounded-xl m-0 py-3 px-4 appearance-none box-border text-center focus:outline-none focus-visible::shadow-input-focus focus-visible::outline-none text-chichi shadow-input-err hover:shadow-input-err focus:shadow-input-err"
              inputmode="text"
              maxlength="1"
              pattern="[\\\\w\\\\d]{1}"
              type="text"
            />
          </div>
          <p
            class="inline-block mt-2 ps-4 text-moon-12 text-chichi !p-0"
            role="alert"
          />
        </div>
      </form>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`AuthCode in RTL renders FourChars 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        dir="rtl"
      >
        <form
          class="flex flex-col justify-between items-end gap-y-2"
        >
          <div
            class="flex flex-row justify-center gap-2"
          >
            <input
              aria-label="Character 1."
              autocomplete="one-time-code"
              class="h-14 w-[2.875rem] text-lg rounded-xl m-0 py-3 px-4 appearance-none text-bulma box-border text-center shadow-input hover:shadow-input-hov focus:shadow-input-focus focus:outline-none focus-visible::shadow-input-focus focus-visible::outline-none"
              inputmode="text"
              maxlength="1"
              pattern="[\\\\w\\\\d]{1}"
              type="text"
            />
            <input
              aria-label="Character 2."
              autocomplete="off"
              class="h-14 w-[2.875rem] text-lg rounded-xl m-0 py-3 px-4 appearance-none text-bulma box-border text-center shadow-input hover:shadow-input-hov focus:shadow-input-focus focus:outline-none focus-visible::shadow-input-focus focus-visible::outline-none"
              inputmode="text"
              maxlength="1"
              pattern="[\\\\w\\\\d]{1}"
              type="text"
            />
            <input
              aria-label="Character 3."
              autocomplete="off"
              class="h-14 w-[2.875rem] text-lg rounded-xl m-0 py-3 px-4 appearance-none text-bulma box-border text-center shadow-input hover:shadow-input-hov focus:shadow-input-focus focus:outline-none focus-visible::shadow-input-focus focus-visible::outline-none"
              inputmode="text"
              maxlength="1"
              pattern="[\\\\w\\\\d]{1}"
              type="text"
            />
            <input
              aria-label="Character 4."
              autocomplete="off"
              class="h-14 w-[2.875rem] text-lg rounded-xl m-0 py-3 px-4 appearance-none text-bulma box-border text-center shadow-input hover:shadow-input-hov focus:shadow-input-focus focus:outline-none focus-visible::shadow-input-focus focus-visible::outline-none"
              inputmode="text"
              maxlength="1"
              pattern="[\\\\w\\\\d]{1}"
              type="text"
            />
          </div>
        </form>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      dir="rtl"
    >
      <form
        class="flex flex-col justify-between items-end gap-y-2"
      >
        <div
          class="flex flex-row justify-center gap-2"
        >
          <input
            aria-label="Character 1."
            autocomplete="one-time-code"
            class="h-14 w-[2.875rem] text-lg rounded-xl m-0 py-3 px-4 appearance-none text-bulma box-border text-center shadow-input hover:shadow-input-hov focus:shadow-input-focus focus:outline-none focus-visible::shadow-input-focus focus-visible::outline-none"
            inputmode="text"
            maxlength="1"
            pattern="[\\\\w\\\\d]{1}"
            type="text"
          />
          <input
            aria-label="Character 2."
            autocomplete="off"
            class="h-14 w-[2.875rem] text-lg rounded-xl m-0 py-3 px-4 appearance-none text-bulma box-border text-center shadow-input hover:shadow-input-hov focus:shadow-input-focus focus:outline-none focus-visible::shadow-input-focus focus-visible::outline-none"
            inputmode="text"
            maxlength="1"
            pattern="[\\\\w\\\\d]{1}"
            type="text"
          />
          <input
            aria-label="Character 3."
            autocomplete="off"
            class="h-14 w-[2.875rem] text-lg rounded-xl m-0 py-3 px-4 appearance-none text-bulma box-border text-center shadow-input hover:shadow-input-hov focus:shadow-input-focus focus:outline-none focus-visible::shadow-input-focus focus-visible::outline-none"
            inputmode="text"
            maxlength="1"
            pattern="[\\\\w\\\\d]{1}"
            type="text"
          />
          <input
            aria-label="Character 4."
            autocomplete="off"
            class="h-14 w-[2.875rem] text-lg rounded-xl m-0 py-3 px-4 appearance-none text-bulma box-border text-center shadow-input hover:shadow-input-hov focus:shadow-input-focus focus:outline-none focus-visible::shadow-input-focus focus-visible::outline-none"
            inputmode="text"
            maxlength="1"
            pattern="[\\\\w\\\\d]{1}"
            type="text"
          />
        </div>
      </form>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`AuthCode in RTL renders OnlyDigits 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        dir="rtl"
      >
        <form
          class="flex flex-col justify-between items-end gap-y-2"
        >
          <div
            class="flex flex-row justify-center gap-2"
          >
            <input
              aria-label="Character 1."
              autocomplete="one-time-code"
              class="h-14 w-[2.875rem] text-lg rounded-xl m-0 py-3 px-4 appearance-none text-bulma box-border text-center shadow-input hover:shadow-input-hov focus:shadow-input-focus focus:outline-none focus-visible::shadow-input-focus focus-visible::outline-none"
              inputmode="numeric"
              max="9"
              maxlength="1"
              min="0"
              pattern="[0-9]{1}"
              type="tel"
            />
            <input
              aria-label="Character 2."
              autocomplete="off"
              class="h-14 w-[2.875rem] text-lg rounded-xl m-0 py-3 px-4 appearance-none text-bulma box-border text-center shadow-input hover:shadow-input-hov focus:shadow-input-focus focus:outline-none focus-visible::shadow-input-focus focus-visible::outline-none"
              inputmode="numeric"
              max="9"
              maxlength="1"
              min="0"
              pattern="[0-9]{1}"
              type="tel"
            />
            <input
              aria-label="Character 3."
              autocomplete="off"
              class="h-14 w-[2.875rem] text-lg rounded-xl m-0 py-3 px-4 appearance-none text-bulma box-border text-center shadow-input hover:shadow-input-hov focus:shadow-input-focus focus:outline-none focus-visible::shadow-input-focus focus-visible::outline-none"
              inputmode="numeric"
              max="9"
              maxlength="1"
              min="0"
              pattern="[0-9]{1}"
              type="tel"
            />
            <input
              aria-label="Character 4."
              autocomplete="off"
              class="h-14 w-[2.875rem] text-lg rounded-xl m-0 py-3 px-4 appearance-none text-bulma box-border text-center shadow-input hover:shadow-input-hov focus:shadow-input-focus focus:outline-none focus-visible::shadow-input-focus focus-visible::outline-none"
              inputmode="numeric"
              max="9"
              maxlength="1"
              min="0"
              pattern="[0-9]{1}"
              type="tel"
            />
            <input
              aria-label="Character 5."
              autocomplete="off"
              class="h-14 w-[2.875rem] text-lg rounded-xl m-0 py-3 px-4 appearance-none text-bulma box-border text-center shadow-input hover:shadow-input-hov focus:shadow-input-focus focus:outline-none focus-visible::shadow-input-focus focus-visible::outline-none"
              inputmode="numeric"
              max="9"
              maxlength="1"
              min="0"
              pattern="[0-9]{1}"
              type="tel"
            />
          </div>
        </form>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      dir="rtl"
    >
      <form
        class="flex flex-col justify-between items-end gap-y-2"
      >
        <div
          class="flex flex-row justify-center gap-2"
        >
          <input
            aria-label="Character 1."
            autocomplete="one-time-code"
            class="h-14 w-[2.875rem] text-lg rounded-xl m-0 py-3 px-4 appearance-none text-bulma box-border text-center shadow-input hover:shadow-input-hov focus:shadow-input-focus focus:outline-none focus-visible::shadow-input-focus focus-visible::outline-none"
            inputmode="numeric"
            max="9"
            maxlength="1"
            min="0"
            pattern="[0-9]{1}"
            type="tel"
          />
          <input
            aria-label="Character 2."
            autocomplete="off"
            class="h-14 w-[2.875rem] text-lg rounded-xl m-0 py-3 px-4 appearance-none text-bulma box-border text-center shadow-input hover:shadow-input-hov focus:shadow-input-focus focus:outline-none focus-visible::shadow-input-focus focus-visible::outline-none"
            inputmode="numeric"
            max="9"
            maxlength="1"
            min="0"
            pattern="[0-9]{1}"
            type="tel"
          />
          <input
            aria-label="Character 3."
            autocomplete="off"
            class="h-14 w-[2.875rem] text-lg rounded-xl m-0 py-3 px-4 appearance-none text-bulma box-border text-center shadow-input hover:shadow-input-hov focus:shadow-input-focus focus:outline-none focus-visible::shadow-input-focus focus-visible::outline-none"
            inputmode="numeric"
            max="9"
            maxlength="1"
            min="0"
            pattern="[0-9]{1}"
            type="tel"
          />
          <input
            aria-label="Character 4."
            autocomplete="off"
            class="h-14 w-[2.875rem] text-lg rounded-xl m-0 py-3 px-4 appearance-none text-bulma box-border text-center shadow-input hover:shadow-input-hov focus:shadow-input-focus focus:outline-none focus-visible::shadow-input-focus focus-visible::outline-none"
            inputmode="numeric"
            max="9"
            maxlength="1"
            min="0"
            pattern="[0-9]{1}"
            type="tel"
          />
          <input
            aria-label="Character 5."
            autocomplete="off"
            class="h-14 w-[2.875rem] text-lg rounded-xl m-0 py-3 px-4 appearance-none text-bulma box-border text-center shadow-input hover:shadow-input-hov focus:shadow-input-focus focus:outline-none focus-visible::shadow-input-focus focus-visible::outline-none"
            inputmode="numeric"
            max="9"
            maxlength="1"
            min="0"
            pattern="[0-9]{1}"
            type="tel"
          />
        </div>
      </form>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`AuthCode renders Default 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <form
        class="flex flex-col justify-between items-end gap-y-2"
      >
        <div
          class="flex flex-row justify-center gap-2"
        >
          <input
            aria-label="Character 1."
            autocomplete="one-time-code"
            class="h-14 w-[2.875rem] text-lg rounded-xl m-0 py-3 px-4 appearance-none text-bulma box-border text-center shadow-input hover:shadow-input-hov focus:shadow-input-focus focus:outline-none focus-visible::shadow-input-focus focus-visible::outline-none"
            inputmode="text"
            maxlength="1"
            pattern="[\\\\w\\\\d]{1}"
            type="text"
          />
          <input
            aria-label="Character 2."
            autocomplete="off"
            class="h-14 w-[2.875rem] text-lg rounded-xl m-0 py-3 px-4 appearance-none text-bulma box-border text-center shadow-input hover:shadow-input-hov focus:shadow-input-focus focus:outline-none focus-visible::shadow-input-focus focus-visible::outline-none"
            inputmode="text"
            maxlength="1"
            pattern="[\\\\w\\\\d]{1}"
            type="text"
          />
          <input
            aria-label="Character 3."
            autocomplete="off"
            class="h-14 w-[2.875rem] text-lg rounded-xl m-0 py-3 px-4 appearance-none text-bulma box-border text-center shadow-input hover:shadow-input-hov focus:shadow-input-focus focus:outline-none focus-visible::shadow-input-focus focus-visible::outline-none"
            inputmode="text"
            maxlength="1"
            pattern="[\\\\w\\\\d]{1}"
            type="text"
          />
          <input
            aria-label="Character 4."
            autocomplete="off"
            class="h-14 w-[2.875rem] text-lg rounded-xl m-0 py-3 px-4 appearance-none text-bulma box-border text-center shadow-input hover:shadow-input-hov focus:shadow-input-focus focus:outline-none focus-visible::shadow-input-focus focus-visible::outline-none"
            inputmode="text"
            maxlength="1"
            pattern="[\\\\w\\\\d]{1}"
            type="text"
          />
          <input
            aria-label="Character 5."
            autocomplete="off"
            class="h-14 w-[2.875rem] text-lg rounded-xl m-0 py-3 px-4 appearance-none text-bulma box-border text-center shadow-input hover:shadow-input-hov focus:shadow-input-focus focus:outline-none focus-visible::shadow-input-focus focus-visible::outline-none"
            inputmode="text"
            maxlength="1"
            pattern="[\\\\w\\\\d]{1}"
            type="text"
          />
          <input
            aria-label="Character 6."
            autocomplete="off"
            class="h-14 w-[2.875rem] text-lg rounded-xl m-0 py-3 px-4 appearance-none text-bulma box-border text-center shadow-input hover:shadow-input-hov focus:shadow-input-focus focus:outline-none focus-visible::shadow-input-focus focus-visible::outline-none"
            inputmode="text"
            maxlength="1"
            pattern="[\\\\w\\\\d]{1}"
            type="text"
          />
        </div>
      </form>
    </div>
  </body>,
  "container": <div>
    <form
      class="flex flex-col justify-between items-end gap-y-2"
    >
      <div
        class="flex flex-row justify-center gap-2"
      >
        <input
          aria-label="Character 1."
          autocomplete="one-time-code"
          class="h-14 w-[2.875rem] text-lg rounded-xl m-0 py-3 px-4 appearance-none text-bulma box-border text-center shadow-input hover:shadow-input-hov focus:shadow-input-focus focus:outline-none focus-visible::shadow-input-focus focus-visible::outline-none"
          inputmode="text"
          maxlength="1"
          pattern="[\\\\w\\\\d]{1}"
          type="text"
        />
        <input
          aria-label="Character 2."
          autocomplete="off"
          class="h-14 w-[2.875rem] text-lg rounded-xl m-0 py-3 px-4 appearance-none text-bulma box-border text-center shadow-input hover:shadow-input-hov focus:shadow-input-focus focus:outline-none focus-visible::shadow-input-focus focus-visible::outline-none"
          inputmode="text"
          maxlength="1"
          pattern="[\\\\w\\\\d]{1}"
          type="text"
        />
        <input
          aria-label="Character 3."
          autocomplete="off"
          class="h-14 w-[2.875rem] text-lg rounded-xl m-0 py-3 px-4 appearance-none text-bulma box-border text-center shadow-input hover:shadow-input-hov focus:shadow-input-focus focus:outline-none focus-visible::shadow-input-focus focus-visible::outline-none"
          inputmode="text"
          maxlength="1"
          pattern="[\\\\w\\\\d]{1}"
          type="text"
        />
        <input
          aria-label="Character 4."
          autocomplete="off"
          class="h-14 w-[2.875rem] text-lg rounded-xl m-0 py-3 px-4 appearance-none text-bulma box-border text-center shadow-input hover:shadow-input-hov focus:shadow-input-focus focus:outline-none focus-visible::shadow-input-focus focus-visible::outline-none"
          inputmode="text"
          maxlength="1"
          pattern="[\\\\w\\\\d]{1}"
          type="text"
        />
        <input
          aria-label="Character 5."
          autocomplete="off"
          class="h-14 w-[2.875rem] text-lg rounded-xl m-0 py-3 px-4 appearance-none text-bulma box-border text-center shadow-input hover:shadow-input-hov focus:shadow-input-focus focus:outline-none focus-visible::shadow-input-focus focus-visible::outline-none"
          inputmode="text"
          maxlength="1"
          pattern="[\\\\w\\\\d]{1}"
          type="text"
        />
        <input
          aria-label="Character 6."
          autocomplete="off"
          class="h-14 w-[2.875rem] text-lg rounded-xl m-0 py-3 px-4 appearance-none text-bulma box-border text-center shadow-input hover:shadow-input-hov focus:shadow-input-focus focus:outline-none focus-visible::shadow-input-focus focus-visible::outline-none"
          inputmode="text"
          maxlength="1"
          pattern="[\\\\w\\\\d]{1}"
          type="text"
        />
      </div>
    </form>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`AuthCode renders ErrorState 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <form
        class="flex flex-col justify-between gap-y-2"
      >
        <div
          class="flex flex-col gap-2"
        >
          <div
            class="flex flex-row justify-center gap-2"
          >
            <input
              aria-label="Character 1."
              autocomplete="one-time-code"
              class="h-14 w-[2.875rem] text-lg rounded-xl m-0 py-3 px-4 appearance-none box-border text-center focus:outline-none focus-visible::shadow-input-focus focus-visible::outline-none text-chichi shadow-input-err hover:shadow-input-err focus:shadow-input-err"
              inputmode="text"
              maxlength="1"
              pattern="[\\\\w\\\\d]{1}"
              type="text"
            />
            <input
              aria-label="Character 2."
              autocomplete="off"
              class="h-14 w-[2.875rem] text-lg rounded-xl m-0 py-3 px-4 appearance-none box-border text-center focus:outline-none focus-visible::shadow-input-focus focus-visible::outline-none text-chichi shadow-input-err hover:shadow-input-err focus:shadow-input-err"
              inputmode="text"
              maxlength="1"
              pattern="[\\\\w\\\\d]{1}"
              type="text"
            />
            <input
              aria-label="Character 3."
              autocomplete="off"
              class="h-14 w-[2.875rem] text-lg rounded-xl m-0 py-3 px-4 appearance-none box-border text-center focus:outline-none focus-visible::shadow-input-focus focus-visible::outline-none text-chichi shadow-input-err hover:shadow-input-err focus:shadow-input-err"
              inputmode="text"
              maxlength="1"
              pattern="[\\\\w\\\\d]{1}"
              type="text"
            />
            <input
              aria-label="Character 4."
              autocomplete="off"
              class="h-14 w-[2.875rem] text-lg rounded-xl m-0 py-3 px-4 appearance-none box-border text-center focus:outline-none focus-visible::shadow-input-focus focus-visible::outline-none text-chichi shadow-input-err hover:shadow-input-err focus:shadow-input-err"
              inputmode="text"
              maxlength="1"
              pattern="[\\\\w\\\\d]{1}"
              type="text"
            />
            <input
              aria-label="Character 5."
              autocomplete="off"
              class="h-14 w-[2.875rem] text-lg rounded-xl m-0 py-3 px-4 appearance-none box-border text-center focus:outline-none focus-visible::shadow-input-focus focus-visible::outline-none text-chichi shadow-input-err hover:shadow-input-err focus:shadow-input-err"
              inputmode="text"
              maxlength="1"
              pattern="[\\\\w\\\\d]{1}"
              type="text"
            />
            <input
              aria-label="Character 6."
              autocomplete="off"
              class="h-14 w-[2.875rem] text-lg rounded-xl m-0 py-3 px-4 appearance-none box-border text-center focus:outline-none focus-visible::shadow-input-focus focus-visible::outline-none text-chichi shadow-input-err hover:shadow-input-err focus:shadow-input-err"
              inputmode="text"
              maxlength="1"
              pattern="[\\\\w\\\\d]{1}"
              type="text"
            />
          </div>
          <p
            class="inline-block mt-2 ps-4 text-moon-12 text-chichi !p-0"
            role="alert"
          />
        </div>
      </form>
    </div>
  </body>,
  "container": <div>
    <form
      class="flex flex-col justify-between gap-y-2"
    >
      <div
        class="flex flex-col gap-2"
      >
        <div
          class="flex flex-row justify-center gap-2"
        >
          <input
            aria-label="Character 1."
            autocomplete="one-time-code"
            class="h-14 w-[2.875rem] text-lg rounded-xl m-0 py-3 px-4 appearance-none box-border text-center focus:outline-none focus-visible::shadow-input-focus focus-visible::outline-none text-chichi shadow-input-err hover:shadow-input-err focus:shadow-input-err"
            inputmode="text"
            maxlength="1"
            pattern="[\\\\w\\\\d]{1}"
            type="text"
          />
          <input
            aria-label="Character 2."
            autocomplete="off"
            class="h-14 w-[2.875rem] text-lg rounded-xl m-0 py-3 px-4 appearance-none box-border text-center focus:outline-none focus-visible::shadow-input-focus focus-visible::outline-none text-chichi shadow-input-err hover:shadow-input-err focus:shadow-input-err"
            inputmode="text"
            maxlength="1"
            pattern="[\\\\w\\\\d]{1}"
            type="text"
          />
          <input
            aria-label="Character 3."
            autocomplete="off"
            class="h-14 w-[2.875rem] text-lg rounded-xl m-0 py-3 px-4 appearance-none box-border text-center focus:outline-none focus-visible::shadow-input-focus focus-visible::outline-none text-chichi shadow-input-err hover:shadow-input-err focus:shadow-input-err"
            inputmode="text"
            maxlength="1"
            pattern="[\\\\w\\\\d]{1}"
            type="text"
          />
          <input
            aria-label="Character 4."
            autocomplete="off"
            class="h-14 w-[2.875rem] text-lg rounded-xl m-0 py-3 px-4 appearance-none box-border text-center focus:outline-none focus-visible::shadow-input-focus focus-visible::outline-none text-chichi shadow-input-err hover:shadow-input-err focus:shadow-input-err"
            inputmode="text"
            maxlength="1"
            pattern="[\\\\w\\\\d]{1}"
            type="text"
          />
          <input
            aria-label="Character 5."
            autocomplete="off"
            class="h-14 w-[2.875rem] text-lg rounded-xl m-0 py-3 px-4 appearance-none box-border text-center focus:outline-none focus-visible::shadow-input-focus focus-visible::outline-none text-chichi shadow-input-err hover:shadow-input-err focus:shadow-input-err"
            inputmode="text"
            maxlength="1"
            pattern="[\\\\w\\\\d]{1}"
            type="text"
          />
          <input
            aria-label="Character 6."
            autocomplete="off"
            class="h-14 w-[2.875rem] text-lg rounded-xl m-0 py-3 px-4 appearance-none box-border text-center focus:outline-none focus-visible::shadow-input-focus focus-visible::outline-none text-chichi shadow-input-err hover:shadow-input-err focus:shadow-input-err"
            inputmode="text"
            maxlength="1"
            pattern="[\\\\w\\\\d]{1}"
            type="text"
          />
        </div>
        <p
          class="inline-block mt-2 ps-4 text-moon-12 text-chichi !p-0"
          role="alert"
        />
      </div>
    </form>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`AuthCode renders FourChars 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <form
        class="flex flex-col justify-between items-end gap-y-2"
      >
        <div
          class="flex flex-row justify-center gap-2"
        >
          <input
            aria-label="Character 1."
            autocomplete="one-time-code"
            class="h-14 w-[2.875rem] text-lg rounded-xl m-0 py-3 px-4 appearance-none text-bulma box-border text-center shadow-input hover:shadow-input-hov focus:shadow-input-focus focus:outline-none focus-visible::shadow-input-focus focus-visible::outline-none"
            inputmode="text"
            maxlength="1"
            pattern="[\\\\w\\\\d]{1}"
            type="text"
          />
          <input
            aria-label="Character 2."
            autocomplete="off"
            class="h-14 w-[2.875rem] text-lg rounded-xl m-0 py-3 px-4 appearance-none text-bulma box-border text-center shadow-input hover:shadow-input-hov focus:shadow-input-focus focus:outline-none focus-visible::shadow-input-focus focus-visible::outline-none"
            inputmode="text"
            maxlength="1"
            pattern="[\\\\w\\\\d]{1}"
            type="text"
          />
          <input
            aria-label="Character 3."
            autocomplete="off"
            class="h-14 w-[2.875rem] text-lg rounded-xl m-0 py-3 px-4 appearance-none text-bulma box-border text-center shadow-input hover:shadow-input-hov focus:shadow-input-focus focus:outline-none focus-visible::shadow-input-focus focus-visible::outline-none"
            inputmode="text"
            maxlength="1"
            pattern="[\\\\w\\\\d]{1}"
            type="text"
          />
          <input
            aria-label="Character 4."
            autocomplete="off"
            class="h-14 w-[2.875rem] text-lg rounded-xl m-0 py-3 px-4 appearance-none text-bulma box-border text-center shadow-input hover:shadow-input-hov focus:shadow-input-focus focus:outline-none focus-visible::shadow-input-focus focus-visible::outline-none"
            inputmode="text"
            maxlength="1"
            pattern="[\\\\w\\\\d]{1}"
            type="text"
          />
        </div>
      </form>
    </div>
  </body>,
  "container": <div>
    <form
      class="flex flex-col justify-between items-end gap-y-2"
    >
      <div
        class="flex flex-row justify-center gap-2"
      >
        <input
          aria-label="Character 1."
          autocomplete="one-time-code"
          class="h-14 w-[2.875rem] text-lg rounded-xl m-0 py-3 px-4 appearance-none text-bulma box-border text-center shadow-input hover:shadow-input-hov focus:shadow-input-focus focus:outline-none focus-visible::shadow-input-focus focus-visible::outline-none"
          inputmode="text"
          maxlength="1"
          pattern="[\\\\w\\\\d]{1}"
          type="text"
        />
        <input
          aria-label="Character 2."
          autocomplete="off"
          class="h-14 w-[2.875rem] text-lg rounded-xl m-0 py-3 px-4 appearance-none text-bulma box-border text-center shadow-input hover:shadow-input-hov focus:shadow-input-focus focus:outline-none focus-visible::shadow-input-focus focus-visible::outline-none"
          inputmode="text"
          maxlength="1"
          pattern="[\\\\w\\\\d]{1}"
          type="text"
        />
        <input
          aria-label="Character 3."
          autocomplete="off"
          class="h-14 w-[2.875rem] text-lg rounded-xl m-0 py-3 px-4 appearance-none text-bulma box-border text-center shadow-input hover:shadow-input-hov focus:shadow-input-focus focus:outline-none focus-visible::shadow-input-focus focus-visible::outline-none"
          inputmode="text"
          maxlength="1"
          pattern="[\\\\w\\\\d]{1}"
          type="text"
        />
        <input
          aria-label="Character 4."
          autocomplete="off"
          class="h-14 w-[2.875rem] text-lg rounded-xl m-0 py-3 px-4 appearance-none text-bulma box-border text-center shadow-input hover:shadow-input-hov focus:shadow-input-focus focus:outline-none focus-visible::shadow-input-focus focus-visible::outline-none"
          inputmode="text"
          maxlength="1"
          pattern="[\\\\w\\\\d]{1}"
          type="text"
        />
      </div>
    </form>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`AuthCode renders OnlyDigits 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <form
        class="flex flex-col justify-between items-end gap-y-2"
      >
        <div
          class="flex flex-row justify-center gap-2"
        >
          <input
            aria-label="Character 1."
            autocomplete="one-time-code"
            class="h-14 w-[2.875rem] text-lg rounded-xl m-0 py-3 px-4 appearance-none text-bulma box-border text-center shadow-input hover:shadow-input-hov focus:shadow-input-focus focus:outline-none focus-visible::shadow-input-focus focus-visible::outline-none"
            inputmode="numeric"
            max="9"
            maxlength="1"
            min="0"
            pattern="[0-9]{1}"
            type="tel"
          />
          <input
            aria-label="Character 2."
            autocomplete="off"
            class="h-14 w-[2.875rem] text-lg rounded-xl m-0 py-3 px-4 appearance-none text-bulma box-border text-center shadow-input hover:shadow-input-hov focus:shadow-input-focus focus:outline-none focus-visible::shadow-input-focus focus-visible::outline-none"
            inputmode="numeric"
            max="9"
            maxlength="1"
            min="0"
            pattern="[0-9]{1}"
            type="tel"
          />
          <input
            aria-label="Character 3."
            autocomplete="off"
            class="h-14 w-[2.875rem] text-lg rounded-xl m-0 py-3 px-4 appearance-none text-bulma box-border text-center shadow-input hover:shadow-input-hov focus:shadow-input-focus focus:outline-none focus-visible::shadow-input-focus focus-visible::outline-none"
            inputmode="numeric"
            max="9"
            maxlength="1"
            min="0"
            pattern="[0-9]{1}"
            type="tel"
          />
          <input
            aria-label="Character 4."
            autocomplete="off"
            class="h-14 w-[2.875rem] text-lg rounded-xl m-0 py-3 px-4 appearance-none text-bulma box-border text-center shadow-input hover:shadow-input-hov focus:shadow-input-focus focus:outline-none focus-visible::shadow-input-focus focus-visible::outline-none"
            inputmode="numeric"
            max="9"
            maxlength="1"
            min="0"
            pattern="[0-9]{1}"
            type="tel"
          />
          <input
            aria-label="Character 5."
            autocomplete="off"
            class="h-14 w-[2.875rem] text-lg rounded-xl m-0 py-3 px-4 appearance-none text-bulma box-border text-center shadow-input hover:shadow-input-hov focus:shadow-input-focus focus:outline-none focus-visible::shadow-input-focus focus-visible::outline-none"
            inputmode="numeric"
            max="9"
            maxlength="1"
            min="0"
            pattern="[0-9]{1}"
            type="tel"
          />
        </div>
      </form>
    </div>
  </body>,
  "container": <div>
    <form
      class="flex flex-col justify-between items-end gap-y-2"
    >
      <div
        class="flex flex-row justify-center gap-2"
      >
        <input
          aria-label="Character 1."
          autocomplete="one-time-code"
          class="h-14 w-[2.875rem] text-lg rounded-xl m-0 py-3 px-4 appearance-none text-bulma box-border text-center shadow-input hover:shadow-input-hov focus:shadow-input-focus focus:outline-none focus-visible::shadow-input-focus focus-visible::outline-none"
          inputmode="numeric"
          max="9"
          maxlength="1"
          min="0"
          pattern="[0-9]{1}"
          type="tel"
        />
        <input
          aria-label="Character 2."
          autocomplete="off"
          class="h-14 w-[2.875rem] text-lg rounded-xl m-0 py-3 px-4 appearance-none text-bulma box-border text-center shadow-input hover:shadow-input-hov focus:shadow-input-focus focus:outline-none focus-visible::shadow-input-focus focus-visible::outline-none"
          inputmode="numeric"
          max="9"
          maxlength="1"
          min="0"
          pattern="[0-9]{1}"
          type="tel"
        />
        <input
          aria-label="Character 3."
          autocomplete="off"
          class="h-14 w-[2.875rem] text-lg rounded-xl m-0 py-3 px-4 appearance-none text-bulma box-border text-center shadow-input hover:shadow-input-hov focus:shadow-input-focus focus:outline-none focus-visible::shadow-input-focus focus-visible::outline-none"
          inputmode="numeric"
          max="9"
          maxlength="1"
          min="0"
          pattern="[0-9]{1}"
          type="tel"
        />
        <input
          aria-label="Character 4."
          autocomplete="off"
          class="h-14 w-[2.875rem] text-lg rounded-xl m-0 py-3 px-4 appearance-none text-bulma box-border text-center shadow-input hover:shadow-input-hov focus:shadow-input-focus focus:outline-none focus-visible::shadow-input-focus focus-visible::outline-none"
          inputmode="numeric"
          max="9"
          maxlength="1"
          min="0"
          pattern="[0-9]{1}"
          type="tel"
        />
        <input
          aria-label="Character 5."
          autocomplete="off"
          class="h-14 w-[2.875rem] text-lg rounded-xl m-0 py-3 px-4 appearance-none text-bulma box-border text-center shadow-input hover:shadow-input-hov focus:shadow-input-focus focus:outline-none focus-visible::shadow-input-focus focus-visible::outline-none"
          inputmode="numeric"
          max="9"
          maxlength="1"
          min="0"
          pattern="[0-9]{1}"
          type="tel"
        />
      </div>
    </form>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
